# books-multi-crate

./: Cargo.toml  README.md  docker-compose.yaml
books_api/migration/: Cargo.toml
books_api/migration/src/: m20220101_000001_create_table.rs
common/: Cargo.toml
database/: Cargo.toml
database/src/: lib.rs
kafka/: Cargo.toml
kafka/src/: consumer.rs  lib.rs  producer.rs  util.rs
