[workspace]
members=["common", "books_api", "books_analytics", "database", "kafka"]

[workspace.dependencies]
 # Common dependent crates for the sub crates to share the same version.
tokio = { version = "1.28.2", features = ["full"] }                                                         # asynchronous runtime
serde = { version = "1.0.164", features = ["derive"] }                                                      # de/serialization
serde_json = "1.0"                                                                                          # support for from/to JSON format
sea-orm = { version = "0.11.3", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres"] }            # asynchronous ORM
derive_builder = "0.12.0"                                                                                   # provides builder pattern for structs
thiserror = "1.0.40"                                                                                        # allows defining custom errors
testcontainers = "0.14.0"                                                                                   # provides containers for running IT
strum = { version = "0.25.0", features = ["derive"] }                                                       # provides tools to work with enums, to iterate over them and convert between variants to string...  
axum = "0.6.18"                                                                                             # minimalist web framework
opentelemetry = { version = "0.19.0", features = ["rt-tokio", "metrics"] }                                  # observability framework for cloud-native applications. It provides APIs and components for distributed tracing, metrics, and other telemetry data.
tracing = "0.1.37"                                                                                          # a framework for instrumenting apps with structured event-based diagnostics
tracing-subscriber = { version = "0.3", features = ["json", "time", "env-filter",] }                        # allows customization of how traces are formatted, filtered, and dispatched to various outputs
tracing-opentelemetry = "0.19.0"                                                                            # It allows seamless integration of tracing instrumentation with the opentelemetry ecosystem.
opentelemetry-zipkin = { version = "0.17.0", features = ["reqwest-client",], default-features = false }     # it exports telemetry data to a Zipkin backend for further analysis and visualization.
axum-tracing-opentelemetry = "0.12.0"                                                                       # It allows distributed tracing and observability support. it combines the functionalities of axum, tracing, and opentelemetry
apache-avro= { version = "0.14.0", features=["derive"] }                                                    # It provides Apache Avro data serialization format.
schema_registry_converter = { version = "3.1.0", features = ["avro","easy","kafka_test"] }                  # It integrates with the Apache Kafka Schema Registry and provides Avro serialization and deserialization capabilities